overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@
 
 html, body {
   overscroll-behavior: none;
+  overflow-x: none;
 }
 
 
